--- a/src/LivreBundle/Resources/views/Jpo/Bibliotheque.html.twig
+++ b/src/LivreBundle/Resources/views/Jpo/Bibliotheque.html.twig
@@ -6,14 +6,14 @@
 			<div classe="livres_ajoutes">
 				<h2> Livres disponible </h2>
 
-				<label for="tri"> Afficher par : </label>
+				<!--<label for="tri"> Afficher par : </label>
 				<select id="tri">
 					<option>Titre</option>
 					<option>Auteur</option>
 					<option>Editeur</option>
 					<option>Genre</option>
 					<option>Date d'ajout</option>
-				</select>
+				</select>-->
 
 				<center>
 					<table class="tab_livre">
